--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60ecc817",
-   "metadata": {},
-   "source": [
-    "# Lab15"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f248124a",
    "metadata": {
     "vscode": {
@@ -17,14 +9,17 @@
     }
    },
    "source": [
-    "## Consultas requeridas\n",
+    "# Lab15\n",
+    "\n",
+    "## P1. (7 pts) Medir la temperatura y la humedad:\n",
+    "### Consultas requeridas\n",
     "1. Obtener todas las mediciones de humedad del sensor 'SENS001' del último día. La consulta debe incluir el tiempo restante de vida (TTL) de cada registro.\n",
     "\n",
     "2. Detectar valores anómalos fuera del rango permitido en la última hora. Implementar una consulta que identifique mediciones de temperatura o humedad fuera del rango normal. La consulta debe permitir filtrar por sensor específico.\n",
     "\n",
     "3. Verificar el tiempo restante de vida de los datos usando la función TTL. Implementar una consulta que muestre el TTL en diferentes unidades (segundos, horas, días). Crear una consulta para identificar datos que están próximos a expirar (ej: en las próximas 24 horas).\n",
     "\n",
-    "## Estructura de tabla propuesta\n",
+    "### Estructura de tablas propuestas\n",
     "La tabla *sensor_readings* tendrá un propósito general que permite filtrar por tipo de medicion, sensor y día. Esta tabla se usará para la consulta 1.\n",
     "\n",
     "La tabla *sensor_anomalies* será destinada a optimizar la consulta 2, esta nos permite filtrar por hora ya que se incluye este dato en el partition key, además de tener clustering por el valor de la medición lo que facilita hallar los valores anómalos.\n",
@@ -75,7 +70,7 @@
     "    event_time       timestamp,\n",
     "    measurement      double,\n",
     "    primary key ( date, event_time )\n",
-    ") with clustering order by (event_time desc) and\n",
+    ") with clustering order by (event_time asc) and\n",
     "        default_time_to_live = 604800; -- 7 days"
    ]
   },
@@ -84,14 +79,14 @@
    "id": "78e96cc4",
    "metadata": {},
    "source": [
-    "## Creación de datos de prueba\n",
+    "### Configuración del entorno de trabajo\n",
     "\n",
-    "Instalación de driver, se recomienda correr en un enviroment de conda."
+    "Instalación de driver de cassandra para python, se requiere haber configurado un entorno local de conda previamente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "f58fbb15",
    "metadata": {
     "vscode": {
@@ -99,6 +94,145 @@
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - defaults\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.3.1\n",
+      "    latest version: 25.5.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - anaconda\n",
+      " - defaults\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: failed\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "PackagesNotFoundError: The following packages are not available from current channels:\n",
+      "\n",
+      "  - libev\n",
+      "\n",
+      "Current channels:\n",
+      "\n",
+      "  - https://conda.anaconda.org/anaconda\n",
+      "  - defaults\n",
+      "\n",
+      "To search for alternate channels that may provide the conda package you're\n",
+      "looking for, navigate to\n",
+      "\n",
+      "    https://anaconda.org\n",
+      "\n",
+      "and use the search bar at the top of the page.\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - msys2\n",
+      " - defaults\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.3.1\n",
+      "    latest version: 25.5.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - conda-forge\n",
+      " - defaults\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.3.1\n",
+      "    latest version: 25.5.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -113,6 +247,10 @@
     }
    ],
    "source": [
+    "%conda update -n base -c defaults conda\n",
+    "%conda install -c anaconda libev\n",
+    "%conda install -c msys2 m2-make\n",
+    "%conda install -c conda-forge pkg-config\n",
     "%pip install cassandra-driver"
    ]
   },
@@ -121,12 +259,12 @@
    "id": "57b15792",
    "metadata": {},
    "source": [
-    "Script en python"
+    "### Generación de datos y pruebas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4e4b376e",
    "metadata": {},
    "outputs": [
@@ -139,30 +277,30 @@
       "\n",
       "Query 1:\n",
       "Lecturas de temperatura para el sensor SENS001 del día de ayer 2025-07-07:\n",
-      "1440 resultados encontrados en 0.0496 segundos\n",
-      "  - 2025-07-07 23:59:03: 23.996825977300986 (TTL: 604788 segundos)\n",
-      "  - 2025-07-07 23:58:03: 18.05019900240751 (TTL: 604788 segundos)\n",
-      "  - 2025-07-07 23:57:03: 22.191578415285527 (TTL: 604788 segundos)\n",
-      "  - 2025-07-07 23:56:03: 20.917350945396255 (TTL: 604788 segundos)\n",
-      "  - 2025-07-07 23:55:03: 17.66867800150658 (TTL: 604788 segundos)\n",
+      "1440 resultados encontrados en 0.0445 segundos\n",
+      "  - 2025-07-07 23:59:23: 29.201208291475858 (TTL: 604789 segundos)\n",
+      "  - 2025-07-07 23:58:23: 26.325772840598976 (TTL: 604789 segundos)\n",
+      "  - 2025-07-07 23:57:23: 16.36373289016412 (TTL: 604789 segundos)\n",
+      "  - 2025-07-07 23:56:23: 15.755248981596546 (TTL: 604789 segundos)\n",
+      "  - 2025-07-07 23:55:23: 29.982972045719457 (TTL: 604789 segundos)\n",
       "\n",
       "Query 2:\n",
       "Anomalías de humedad para el sensor SENS002 de la hora pasada 2025-07-08T15:\n",
-      "19 resultados encontrados en 0.0274 segundos\n",
-      "  - 2025-07-08 15:59:03: 20.99336421314097\n",
-      "  - 2025-07-08 15:56:03: 87.11390164108695\n",
-      "  - 2025-07-08 15:54:03: 20.04462670966518\n",
-      "  - 2025-07-08 15:52:03: 84.68263384130653\n",
-      "  - 2025-07-08 15:50:03: 85.11937172743727\n",
+      "20 resultados encontrados en 0.0318 segundos\n",
+      "  - 2025-07-08 15:59:23: 26.105229674183267\n",
+      "  - 2025-07-08 15:57:23: 84.11479523132168\n",
+      "  - 2025-07-08 15:52:23: 29.90490526548601\n",
+      "  - 2025-07-08 15:50:23: 29.105740757183067\n",
+      "  - 2025-07-08 15:49:23: 26.49023812956321\n",
       "\n",
       "Query 3:\n",
       "Datos de más de 6 días de antigüedad (2025-07-02):\n",
-      "1440 resultados encontrados en 0.0603 segundos\n",
-      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n",
-      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604797 segundos, 10079 minutos, 167 horas, 6 días)\n"
+      "1440 resultados encontrados en 0.0457 segundos\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604799 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604799 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604799 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604799 segundos, 10079 minutos, 167 horas, 6 días)\n",
+      "  - temperatura del sensor SENS005 del día 2025-07-02 (TTL: 604799 segundos, 10079 minutos, 167 horas, 6 días)\n"
      ]
     }
    ],
@@ -171,7 +309,7 @@
     "import time\n",
     "from datetime import datetime, timedelta\n",
     "from cassandra.cluster import Cluster\n",
-    "from cassandra.query import SimpleStatement, BatchStatement, BatchType\n",
+    "from cassandra.query import BatchStatement, BatchType\n",
     "\n",
     "# Parametros de simulación\n",
     "N_SENSORS = 5\n",
@@ -203,37 +341,40 @@
     "def create_tables() -> None:\n",
     "    # Crear tabla para lecturas de sensores\n",
     "    cassandra.execute(\"\"\"\n",
-    "      CREATE TABLE IF NOT EXISTS sensor_readings (\n",
-    "        measurement_type text,\n",
-    "        sensor_id        text,\n",
-    "        date             text,\n",
-    "        event_time       timestamp,\n",
-    "        measurement      double,\n",
-    "        PRIMARY KEY ((measurement_type, sensor_id, date), event_time)\n",
-    "      ) WITH CLUSTERING ORDER BY (event_time DESC)\n",
-    "        AND default_time_to_live = 604800;\n",
+    "        create table if not exists sensor_readings\n",
+    "        (\n",
+    "            measurement_type text,\n",
+    "            sensor_id        text,\n",
+    "            date             text,\n",
+    "            event_time       timestamp,\n",
+    "            measurement      double,\n",
+    "            primary key ( (measurement_type, sensor_id, date), event_time )\n",
+    "        ) with clustering order by (event_time desc) and\n",
+    "                default_time_to_live = 604800\n",
     "    \"\"\")\n",
     "    cassandra.execute(\"\"\"\n",
-    "      CREATE TABLE IF NOT EXISTS sensor_anomalies (\n",
-    "        measurement_type text,\n",
-    "        sensor_id        text,\n",
-    "        hour             text,\n",
-    "        event_time       timestamp,\n",
-    "        measurement      double,\n",
-    "        PRIMARY KEY ((measurement_type, sensor_id, hour), measurement, event_time)\n",
-    "      ) WITH CLUSTERING ORDER BY (measurement ASC, event_time DESC)\n",
-    "        AND default_time_to_live = 7200;\n",
+    "        create table if not exists sensor_anomalies\n",
+    "        (\n",
+    "            measurement_type text,\n",
+    "            sensor_id        text,\n",
+    "            hour             text,\n",
+    "            event_time       timestamp,\n",
+    "            measurement      double,\n",
+    "            primary key ( (measurement_type, sensor_id, hour), measurement, event_time)\n",
+    "        ) with clustering order by (measurement asc, event_time desc) and\n",
+    "                default_time_to_live = 7200\n",
     "    \"\"\")\n",
     "    cassandra.execute(\"\"\"\n",
-    "      CREATE TABLE IF NOT EXISTS sensor_by_date (\n",
-    "        measurement_type text,\n",
-    "        sensor_id        text,\n",
-    "        date             text,\n",
-    "        event_time       timestamp,\n",
-    "        measurement      double,\n",
-    "        PRIMARY KEY (date, event_time)\n",
-    "      ) WITH CLUSTERING ORDER BY (event_time DESC)\n",
-    "        AND default_time_to_live = 604800;\n",
+    "        create table if not exists sensor_by_date\n",
+    "        (\n",
+    "            measurement_type text,\n",
+    "            sensor_id        text,\n",
+    "            date             text,\n",
+    "            event_time       timestamp,\n",
+    "            measurement      double,\n",
+    "            primary key ( date, event_time )\n",
+    "        ) with clustering order by (event_time asc) and\n",
+    "                default_time_to_live = 604800;\n",
     "    \"\"\")\n",
     "\n",
     "def drop_tables() -> None:\n",
@@ -412,6 +553,14 @@
     "test()\n",
     "# Cerrar conexión a Cassandra\n",
     "cluster.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd7617a",
+   "metadata": {},
+   "source": [
+    "## P2. (13 pts) Evaluación Experimental"
    ]
   }
  ],
