--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -560,7 +560,238 @@
    "id": "3dd7617a",
    "metadata": {},
    "source": [
-    "## P2. (13 pts) Evaluación Experimental"
+    "## P2. (13 pts) Evaluación Experimental\n",
+    "\n",
+    "### Cluster de Cassandra con Docker Compose:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2f6045af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "version: '3.8'\n",
+      "\n",
+      "services:\n",
+      "  cassandra1:\n",
+      "    image: cassandra:4.1\n",
+      "    container_name: cassandra1\n",
+      "    hostname: cassandra1\n",
+      "    networks:\n",
+      "      - cassandra-net\n",
+      "    ports:\n",
+      "      - \"9042:9042\"\n",
+      "    environment:\n",
+      "      CASSANDRA_CLUSTER_NAME: \"CassandraCluster\"\n",
+      "      CASSANDRA_DC: DC1\n",
+      "      CASSANDRA_RACK: RAC1\n",
+      "      CASSANDRA_SEEDS: \"cassandra1,cassandra2,cassandra3\"\n",
+      "      MAX_HEAP_SIZE: 1024M\n",
+      "      HEAP_NEWSIZE: 256M\n",
+      "    mem_limit: 1536m\n",
+      "\n",
+      "  cassandra2:\n",
+      "    image: cassandra:4.1\n",
+      "    container_name: cassandra2\n",
+      "    hostname: cassandra2\n",
+      "    networks:\n",
+      "      - cassandra-net\n",
+      "    depends_on:\n",
+      "      - cassandra1\n",
+      "    environment:\n",
+      "      CASSANDRA_CLUSTER_NAME: \"CassandraCluster\"\n",
+      "      CASSANDRA_DC: DC1\n",
+      "      CASSANDRA_RACK: RAC1\n",
+      "      CASSANDRA_SEEDS: \"cassandra1,cassandra2,cassandra3\"\n",
+      "      MAX_HEAP_SIZE: 1024M\n",
+      "      HEAP_NEWSIZE: 256M\n",
+      "    mem_limit: 1536m\n",
+      "\n",
+      "  cassandra3:\n",
+      "    image: cassandra:4.1\n",
+      "    container_name: cassandra3\n",
+      "    hostname: cassandra3\n",
+      "    networks:\n",
+      "      - cassandra-net\n",
+      "    depends_on:\n",
+      "      - cassandra1\n",
+      "    environment:\n",
+      "      CASSANDRA_CLUSTER_NAME: \"CassandraCluster\"\n",
+      "      CASSANDRA_DC: DC1\n",
+      "      CASSANDRA_RACK: RAC1\n",
+      "      CASSANDRA_SEEDS: \"cassandra1,cassandra2,cassandra3\"\n",
+      "      MAX_HEAP_SIZE: 1024M\n",
+      "      HEAP_NEWSIZE: 256M\n",
+      "    mem_limit: 1536m\n",
+      "\n",
+      "networks:\n",
+      "  cassandra-net:\n",
+      "    driver: bridge\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"docker-compose.yml\") as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "023c4461",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " Container cassandra2  Stopping\n",
+      " Container cassandra3  Stopping\n",
+      " Container cassandra3  Stopped\n",
+      " Container cassandra3  Removing\n",
+      " Container cassandra3  Removed\n",
+      " Container cassandra2  Stopped\n",
+      " Container cassandra2  Removing\n",
+      " Container cassandra2  Removed\n",
+      " Container cassandra1  Stopping\n",
+      " Container cassandra1  Stopped\n",
+      " Container cassandra1  Removing\n",
+      " Container cassandra1  Removed\n",
+      " Network lab15_cassandra-net  Removing\n",
+      " Network lab15_cassandra-net  Removed\n",
+      " Network lab15_cassandra-net  Creating\n",
+      " Network lab15_cassandra-net  Created\n",
+      " Container cassandra1  Creating\n",
+      " Container cassandra1  Created\n",
+      " Container cassandra3  Creating\n",
+      " Container cassandra2  Creating\n",
+      " Container cassandra3  Created\n",
+      " Container cassandra2  Created\n",
+      " Container cassandra1  Starting\n",
+      " Container cassandra1  Started\n",
+      " Container cassandra2  Starting\n",
+      " Container cassandra3  Starting\n",
+      " Container cassandra3  Started\n",
+      " Container cassandra2  Started\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker compose down -v\n",
+    "!docker compose up -d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd9bbafc",
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "CREATE KEYSPACE IF NOT EXISTS my_keyspace\n",
+    "    WITH replication = {\n",
+    "        'class': 'NetworkTopologyStrategy',\n",
+    "        'datacenter1': '3'\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "23c1af94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keyspace: my_keyspace\n",
+      "Replicación: {'class': 'org.apache.cassandra.locator.NetworkTopologyStrategy', 'datacenter1': '3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from cassandra.cluster import Cluster\n",
+    "\n",
+    "cluster = Cluster(['localhost'], port=9042)\n",
+    "session = cluster.connect()\n",
+    "\n",
+    "# Crear keyspace (si no existe)\n",
+    "session.execute(\"\"\"\n",
+    "    CREATE KEYSPACE IF NOT EXISTS my_keyspace\n",
+    "    WITH replication = {\n",
+    "        'class': 'NetworkTopologyStrategy',\n",
+    "        'datacenter1': '3'\n",
+    "    }\n",
+    "\"\"\")\n",
+    "\n",
+    "# Verificar la creación del keyspace\n",
+    "rows = session.execute(\"\"\"\n",
+    "    SELECT keyspace_name, replication\n",
+    "    FROM system_schema.keyspaces\n",
+    "    WHERE keyspace_name = 'my_keyspace'\n",
+    "\"\"\")\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(\"Keyspace:\", row.keyspace_name)\n",
+    "    print(\"Replicación:\", row.replication)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "407a946e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID   IMAGE           COMMAND                  CREATED          STATUS          PORTS                                                       NAMES\n",
+      "5674d14e8152   cassandra:4.1   \"docker-entrypoint.s…\"   10 minutes ago   Up 10 minutes   7000-7001/tcp, 7199/tcp, 9042/tcp, 9160/tcp                 cassandra2\n",
+      "3ba274a98a65   cassandra:4.1   \"docker-entrypoint.s…\"   10 minutes ago   Up 10 minutes   7000-7001/tcp, 7199/tcp, 9042/tcp, 9160/tcp                 cassandra3\n",
+      "c62be9070c46   cassandra:4.1   \"docker-entrypoint.s…\"   10 minutes ago   Up 10 minutes   7000-7001/tcp, 7199/tcp, 9160/tcp, 0.0.0.0:9042->9042/tcp   cassandra1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2076ebac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datacenter: datacenter1\n",
+      "=======================\n",
+      "Status=Up/Down\n",
+      "|/ State=Normal/Leaving/Joining/Moving\n",
+      "--  Address     Load       Tokens  Owns (effective)  Host ID                               Rack \n",
+      "UN  172.21.0.4  75.44 KiB  16      100.0%            91278d84-a6f5-4c4a-a15d-4d130f69f9c3  rack1\n",
+      "UN  172.21.0.2  75.45 KiB  16      100.0%            911df817-5bbb-4120-8416-5a526e0645ae  rack1\n",
+      "UN  172.21.0.3  75.44 KiB  16      100.0%            7d2e0357-0bdc-4cfe-be43-3236e4121186  rack1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker exec cassandra1 nodetool status"
    ]
   }
  ],
