--- a/Lab15/lab15.ipynb
+++ b/Lab15/lab15.ipynb
@@ -793,6 +793,228 @@
    "source": [
     "!docker exec cassandra1 nodetool status"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df5d5b8b",
+   "metadata": {},
+   "source": [
+    "### PostgreSQL\n",
+    "Se usa una instancia local en el puerto 5432."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2498b7da",
+   "metadata": {
+    "vscode": {
+     "languageId": "bat"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels:\n",
+      " - conda-forge\n",
+      " - defaults\n",
+      "Platform: win-64\n",
+      "Collecting package metadata (repodata.json): done\n",
+      "Solving environment: done\n",
+      "\n",
+      "# All requested packages already installed.\n",
+      "\n",
+      "\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "    current version: 25.3.1\n",
+      "    latest version: 25.5.1\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base -c defaults conda\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%conda install -c conda-forge psycopg2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c413f91",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Conexión desde Jupyter Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c4378aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insertando datos por lotes...\n",
+      "Tiempo de inserción por lotes en Cassandra: 35.3797 segundos\n",
+      "Tiempo de inserción por lotes en PostgreSQL: 2.0396 segundos\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "import random\n",
+    "import time\n",
+    "from cassandra.cluster import Cluster\n",
+    "from cassandra.query import BatchStatement\n",
+    "from datetime import datetime, timedelta\n",
+    "from psycopg2.extras import execute_values\n",
+    "\n",
+    "cluster = Cluster(\n",
+    "  ['localhost'], port=9042,\n",
+    "  protocol_version=4,\n",
+    "  connect_timeout=5,\n",
+    "  idle_heartbeat_interval=30,\n",
+    "  control_connection_timeout=10\n",
+    ")\n",
+    "cassandra = cluster.connect('my_keyspace')\n",
+    "\n",
+    "connect = psycopg2.connect(dbname=\"lab15\",user=\"postgres\",password=\"postgres\",host=\"localhost\",port=5432)\n",
+    "connect.autocommit = True\n",
+    "postgres = connect.cursor()\n",
+    "\n",
+    "def create_tables() -> None:\n",
+    "    cassandra.execute(\"\"\"\n",
+    "        create table if not exists temperature_measurements\n",
+    "        (\n",
+    "            sensor_id   text,\n",
+    "            date        text,\n",
+    "            event_time  timestamp,\n",
+    "            temperature double,\n",
+    "            humidity    double,\n",
+    "            primary key ((sensor_id, date), event_time)\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    postgres.execute(\"\"\"\n",
+    "        create table if not exists temperature_measurements\n",
+    "        (\n",
+    "            sensor_id   varchar(20),\n",
+    "            date        varchar(10),\n",
+    "            event_time  timestamp,\n",
+    "            temperature double precision,\n",
+    "            humidity    double precision,\n",
+    "            primary key (sensor_id, date, event_time)\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "\n",
+    "def drop_tables() -> None:\n",
+    "    cassandra.execute(\"drop table if exists temperature_measurements\")\n",
+    "    postgres.execute(\"drop table if exists temperature_measurements\")\n",
+    "\n",
+    "NORMAL_RANGE = [(15, 35), (30, 80)]  # Rango normal para temperatura y humedad\n",
+    "EXTENDED_RANGE = [(low - (high - low) * 0.2, high + (high - low) * 0.2) for low, high in NORMAL_RANGE]\n",
+    "\n",
+    "def generate_data(sensors: int, days: int) -> list[tuple]:\n",
+    "    now = datetime.now()\n",
+    "    ids = [f\"SENS{str(i).zfill(3)}\" for i in range(1, sensors + 1)]\n",
+    "    data: list[tuple] = []\n",
+    "    for id in ids:\n",
+    "        for day in range(days):\n",
+    "            date_obj = now - timedelta(days=day)\n",
+    "            date_str = date_obj.strftime('%Y-%m-%d')\n",
+    "            for minute in range(24 * 60):\n",
+    "                timestamp = date_obj.replace(hour=0, minute=0, second=0, microsecond=0) + timedelta(minutes=minute)\n",
+    "                temperature = random.uniform(*EXTENDED_RANGE[0])\n",
+    "                humidity = random.uniform(*EXTENDED_RANGE[1])\n",
+    "                data.append((id, date_str, timestamp, temperature, humidity))\n",
+    "    return data\n",
+    "\n",
+    "def insert_individual(data: list[tuple]) -> None:\n",
+    "    # Insertar datos individualmente en Cassandra y PostgreSQL\n",
+    "    print(\"Insertando datos individualmente...\")\n",
+    "    start = time.time()\n",
+    "    for row in data:\n",
+    "        cassandra.execute(\"\"\"\n",
+    "            INSERT INTO temperature_measurements (sensor_id, date, event_time, temperature, humidity)\n",
+    "            VALUES (%s, %s, %s, %s, %s)\n",
+    "        \"\"\", row)\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "    \n",
+    "    start = time.time()\n",
+    "    for row in data:\n",
+    "        postgres.execute(\"\"\"\n",
+    "            INSERT INTO temperature_measurements (sensor_id, date, event_time, temperature, humidity)\n",
+    "            VALUES (%s, %s, %s, %s, %s)\n",
+    "        \"\"\", row)\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "\n",
+    "    print(f\"Tiempo de inserción individual en Cassandra: {cassandra_time:.4f} segundos\")\n",
+    "    print(f\"Tiempo de inserción individual en PostgreSQL: {postgres_time:.4f} segundos\")\n",
+    "\n",
+    "def insert_batch(data: list[tuple], batch_size: int = 100) -> None:\n",
+    "    # Insertar datos por lotes en Cassandra y PostgreSQL\n",
+    "    print(\"Insertando datos por lotes...\")\n",
+    "    start = time.time()\n",
+    "    prepared = cassandra.prepare(\"\"\"\n",
+    "        INSERT INTO temperature_measurements (sensor_id, date, event_time, temperature, humidity)\n",
+    "        VALUES (?, ?, ?, ?, ?)\n",
+    "    \"\"\")\n",
+    "    batch = BatchStatement()\n",
+    "    for i in range(0, len(data), batch_size):\n",
+    "        for row in data[i:i+batch_size]:\n",
+    "            batch.add(prepared, row)\n",
+    "        cassandra.execute(batch)\n",
+    "        batch.clear()\n",
+    "    end = time.time()\n",
+    "    cassandra_time = end - start\n",
+    "\n",
+    "    start = time.time()\n",
+    "    query = \"\"\"\n",
+    "        INSERT INTO temperature_measurements (sensor_id, date, event_time, temperature, humidity)\n",
+    "        VALUES %s\n",
+    "    \"\"\"\n",
+    "    execute_values(postgres, query, data)\n",
+    "    end = time.time()\n",
+    "    postgres_time = end - start\n",
+    "\n",
+    "    print(f\"Tiempo de inserción por lotes en Cassandra: {cassandra_time:.4f} segundos\")\n",
+    "    print(f\"Tiempo de inserción por lotes en PostgreSQL: {postgres_time:.4f} segundos\")\n",
+    "\n",
+    "def insert_test() -> None:\n",
+    "    data: list[tuple] = generate_data(sensors=5, days=7)\n",
+    "    create_tables()\n",
+    "    insert_batch(data)\n",
+    "    drop_tables()\n",
+    "\n",
+    "insert_test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "740f9abb",
+   "metadata": {},
+   "source": [
+    "### Pruebas de Escritura (INSERT)\n",
+    "Se hicieron pruebas con inserción individual con un volumen reducido de 5 sensores por 7 días y el tiempo fue demasiado por lo que descartó directamente, prefiriendose la inserción por batch."
+   ]
   }
  ],
  "metadata": {
